Description des changements que tu as faits

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ClubIndus-AIAC</title>
+    <title>Industrial club AIAC</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -78,7 +78,9 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5">
         <a href="index.html" class="navbar-brand ps-5 me-0">
+            <div ><img class="logo" src="img/logo.png"></div>
             <h1 class="text-white m-0">ClubIndus-AIAC</h1>
+
         </a>
         <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -101,7 +103,7 @@
                 <a href="contact.html" class="nav-item nav-link active">Contact</a>
             </div>
             <a href="" class="btn btn-primary px-3 d-none d-lg-block">Follow</a>
-            <div ><img class="logo" src="img/logo.png"></div>
+            
         </div>
     </nav>
     <!-- Navbar End -->
@@ -290,6 +292,7 @@
         <div class="container text-center">
             <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="#">ClubIndus-AIAC</a>, All Right Reserved.</p>
             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+            <p class="mb-0">Created By <a class="fw-semi-bold" href="">Industrial Club Team</a></p>
             <p class="mb-0">Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">HTML Codex</a></p>
         </div>
     </div>
