--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5">
         <a href="index.html" class="navbar-brand ps-5 me-0">
+            <div ><img class="logo" src="img/logo.png"></div>
             <h1 class="text-white m-0">ClubIndus-AIAC</h1>
+            
         </a>
         <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -89,7 +91,7 @@
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
             <a href="" class="btn btn-primary px-3 d-none d-lg-block">Follow</a>
-            <div ><img class="logo" src="img/logo.png"></div>
+            
         </div>
     </nav>
     <!-- Navbar End -->
@@ -220,21 +222,21 @@
             <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.3s">
                 <div class="text-center border p-5">
                     <i class="fa fa-users-cog fa-3x text-white mb-3"></i>
-                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">135</h1>
+                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">65</h1>
                     <span class="fs-5 fw-semi-bold text-white">Team Members</span>
                 </div>
             </div>
             <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.5s">
                 <div class="text-center border p-5">
                     <i class="fa fa-users fa-3x text-white mb-3"></i>
-                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">957</h1>
+                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">457</h1>
                     <span class="fs-5 fw-semi-bold text-white">Old Members</span>
                 </div>
             </div>
             <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
                 <div class="text-center border p-5">
                     <i class="fa fa-check-double fa-3x text-white mb-3"></i>
-                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">1839</h1>
+                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">9</h1>
                     <span class="fs-5 fw-semi-bold text-white">Projects Done</span>
                 </div>
             </div>
@@ -701,6 +703,7 @@
         <div class="container text-center">
             <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="#">ClubIndus-AIAC</a>, All Right Reserved.</p>
             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+            <p class="mb-0">Created By <a class="fw-semi-bold" href="">Industrial Club Team</a></p>
             <p class="mb-0">Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">HTML Codex</a></p>
         </div>
     </div>
