modification sur les pages

--- a/404.html
+++ b/404.html
@@ -54,7 +54,7 @@
             <div class="col-lg-6 text-end">
                 <div class="h-100 topbar-right d-inline-flex align-items-center text-white py-2 px-5">
                     <span class="fs-5 fw-bold me-2"><i class="fa fa-phone-alt me-2"></i>Call Us:</span>
-                    <span class="fs-5 fw-bold">+212 666666666</span>
+                    <span class="fs-5 fw-bold">+212 696082980</span>
                 </div>
             </div>
         </div>
@@ -115,19 +115,37 @@
     <!-- events Start -->
     <div class="news-container">
         <div class="news-item">
-            <img src="img/project-1.jpg" alt="Image de nouvelle">
-            <h2>Titre 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+            <img src="img/JI1.jpg" alt="Image de nouvelle">
+            <h2>The 3rd Industrial Day</h2>
+            <p><details>
+                <summary>Show mor</summary>
+                The 3rd Industrial Day organized by the Club Indus at AIAC in 2017 focused on the theme "Industrial 
+                Ecosystems: A Systemic Approach to Accelerate Sustainable Development." This event highlighted the
+                 importance of viewing industries as interconnected ecosystems, where collaboration between 
+                 companies, suppliers, and institutions is key to fostering innovation and sustainability. 
+                 Discussions centered on optimizing resources, integrating clean technologies, and promoting circular economy 
+                 practices. The event aimed to showcase how Moroccan industries can not only achieve economic growth 
+                 but also play a crucial role in advancing sustainable development.
+                </details>
+                </p>
         </div>
         <div class="news-item">
-            <img src="img/project-1.jpg" alt="Image de nouvelle">
-            <h2>Titre  2</h2>
-            <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <img src="img/JI4.jpg" alt="Image de nouvelle">
+            <h2>The 4th Industrial Day</h2>
+            <p><details>
+                <summary>Show mor</summary>
+                The 4th Industrial Day organized by the Club Indus at AIAC in 2018 was centered around the theme "Industry 4.0: The Digital Industrial Revolution for Economic Advancement." This event explored how the digital transformation of industries—through technologies like automation, data exchange, and artificial intelligence—can boost economic growth. It emphasized the potential of Industry 4.0 to enhance productivity, streamline operations, and create innovative business models. The event provided a platform for discussing how Moroccan industries can leverage these advancements to stay competitive and contribute to the nation's economic development.
+                </details>
+            </p>
         </div>
         <div class="news-item">
-            <img src="img/project-1.jpg" alt="Image de nouvelle">
-            <h2>Titre  3</h2>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+            <img src="img/JI5.jpg" alt="Image de nouvelle">
+            <h2>The 5th Industrial Day</h2>
+            <p><details>
+                <summary>Show mor</summary>
+                The 5th Industrial Day, organized by the Club Indus at AIAC in 2019, focused on the theme "Ecosystems 4.0: A New Networked Form of Organization in the Digital Era." This event explored how the integration of digital technologies is reshaping industrial ecosystems, creating new, interconnected networks of collaboration and innovation. It highlighted how Industry 4.0 technologies, such as the Internet of Things (IoT), automation, and data analytics, are transforming traditional business structures into agile, adaptive ecosystems. The discussions underscored the importance of embracing these advancements to drive efficiency, foster collaboration, and ensure the sustainable growth of industries in Morocco.
+                </details>
+            </p>
         </div>
     </div>
     <!-- events End -->
@@ -140,7 +158,7 @@
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Our Academy</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Enousser, Casablanca, Morocco</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+212 66666666</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+212 696082980</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>clubindus@aiac.ma</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
