modification sur les pages

--- a/index.html
+++ b/index.html
@@ -409,25 +409,25 @@
             <a class="project-item" href="">
                 <img class="img-fluid" src="img/project-1.jpg" alt="">
                 <div class="project-title">
-                    <h5 class="text-primary mb-0">Auto Engineering</h5>
+                    <h5 class="text-primary mb-0">Drone</h5>
                 </div>
             </a>
             <a class="project-item" href="">
                 <img class="img-fluid" src="img/project-2.jpg" alt="">
                 <div class="project-title">
-                    <h5 class="text-primary mb-0">Civil Engineering</h5>
+                    <h5 class="text-primary mb-0">power station</h5>
                 </div>
             </a>
             <a class="project-item" href="">
                 <img class="img-fluid" src="img/project-3.jpg" alt="">
                 <div class="project-title">
-                    <h5 class="text-primary mb-0">Gas Engineering</h5>
+                    <h5 class="text-primary mb-0">Computer Numerical Control machine</h5>
                 </div>
             </a>
             <a class="project-item" href="">
                 <img class="img-fluid" src="img/project-4.jpg" alt="">
                 <div class="project-title">
-                    <h5 class="text-primary mb-0">Power Engineering</h5>
+                    <h5 class="text-primary mb-0">airport simulation </h5>
                 </div>
             </a>
             <a class="project-item" href="">
@@ -439,7 +439,7 @@
             <a class="project-item" href="">
                 <img class="img-fluid" src="img/project-6.jpg" alt="">
                 <div class="project-title">
-                    <h5 class="text-primary mb-0">Water Engineering</h5>
+                    <h5 class="text-primary mb-0">Computer Numerical Control machine</h5>
                 </div>
             </a>
         </div>
