--- a/404.html
+++ b/404.html
@@ -115,35 +115,39 @@
     <!-- events Start -->
     <div class="news-container">
         <div class="news-item">
-            <img src="img/JI1.jpg" alt="Image de nouvelle">
-            <h2>The 3rd Industrial Day</h2>
-            <p><details>
-                <summary>Show mor</summary>
-                The 3rd Industrial Day organized by the Club Indus at AIAC in 2017 focused on the theme "Industrial 
-                Ecosystems: A Systemic Approach to Accelerate Sustainable Development." This event highlighted the
-                 importance of viewing industries as interconnected ecosystems, where collaboration between 
-                 companies, suppliers, and institutions is key to fostering innovation and sustainability. 
-                 Discussions centered on optimizing resources, integrating clean technologies, and promoting circular economy 
-                 practices. The event aimed to showcase how Moroccan industries can not only achieve economic growth 
-                 but also play a crucial role in advancing sustainable development.
+            <img src="img/JI5.jpg" alt="Image de nouvelle">
+            <h2>The 5th Industrial Day</h2>
+            <p>
+                The 5th Industrial Day, organized by the Club Indus at AIAC in 2019, focused on the theme "Ecosystems 4.0: A New Networked Form of Organization in the Digital Era."
+                <details>
+                    <summary>Show mor</summary>
+                    This event explored how the integration of digital technologies is reshaping industrial ecosystems, creating new, interconnected networks of collaboration and innovation. It highlighted how Industry 4.0 technologies, such as the Internet of Things (IoT), automation, and data analytics, are transforming traditional business structures into agile, adaptive ecosystems. The discussions underscored the importance of embracing these advancements to drive efficiency, foster collaboration, and ensure the sustainable growth of industries in Morocco.
                 </details>
-                </p>
         </div>
         <div class="news-item">
             <img src="img/JI4.jpg" alt="Image de nouvelle">
             <h2>The 4th Industrial Day</h2>
-            <p><details>
-                <summary>Show mor</summary>
-                The 4th Industrial Day organized by the Club Indus at AIAC in 2018 was centered around the theme "Industry 4.0: The Digital Industrial Revolution for Economic Advancement." This event explored how the digital transformation of industries—through technologies like automation, data exchange, and artificial intelligence—can boost economic growth. It emphasized the potential of Industry 4.0 to enhance productivity, streamline operations, and create innovative business models. The event provided a platform for discussing how Moroccan industries can leverage these advancements to stay competitive and contribute to the nation's economic development.
+            <p>
+                The 4th Industrial Day organized by the Club Indus at AIAC in 2018 was centered around the theme "Industry 4.0: The Digital Industrial Revolution for Economic Advancement." 
+                <details>
+                    <summary>Show mor</summary>
+                    This event explored how the digital transformation of industries—through technologies like automation, data exchange, and artificial intelligence—can boost economic growth. It emphasized the potential of Industry 4.0 to enhance productivity, streamline operations, and create innovative business models. The event provided a platform for discussing how Moroccan industries can leverage these advancements to stay competitive and contribute to the nation's economic development.
                 </details>
             </p>
         </div>
         <div class="news-item">
-            <img src="img/JI5.jpg" alt="Image de nouvelle">
-            <h2>The 5th Industrial Day</h2>
-            <p><details>
+            <img src="img/JI1.jpg" alt="Image de nouvelle">
+            <h2>The 3rd Industrial Day</h2>
+            <p>
+                The 3rd Industrial Day organized by the Club Indus at AIAC in 2017 focused on the theme "Industrial 
+                Ecosystems: A Systemic Approach to Accelerate Sustainable Development." 
+                <details>
                 <summary>Show mor</summary>
-                The 5th Industrial Day, organized by the Club Indus at AIAC in 2019, focused on the theme "Ecosystems 4.0: A New Networked Form of Organization in the Digital Era." This event explored how the integration of digital technologies is reshaping industrial ecosystems, creating new, interconnected networks of collaboration and innovation. It highlighted how Industry 4.0 technologies, such as the Internet of Things (IoT), automation, and data analytics, are transforming traditional business structures into agile, adaptive ecosystems. The discussions underscored the importance of embracing these advancements to drive efficiency, foster collaboration, and ensure the sustainable growth of industries in Morocco.
+                This event highlighted the importance of viewing industries as interconnected ecosystems, where collaboration between 
+                 companies, suppliers, and institutions is key to fostering innovation and sustainability. 
+                 Discussions centered on optimizing resources, integrating clean technologies, and promoting circular economy 
+                 practices. The event aimed to showcase how Moroccan industries can not only achieve economic growth 
+                 but also play a crucial role in advancing sustainable development.
                 </details>
             </p>
         </div>
