modification sur les pages

--- a/project.html
+++ b/project.html
@@ -112,34 +112,34 @@
 
 
     <!-- Project Start -->
-    <div class="container-fluid py-5 my-5 px-0">
-        <div class="text-center mx-auto wow fadeIn" data-wow-delay="0.1s" style="max-width: 600px;">
+    <div class="container-fluid bg-dark pt-5 my-5 px-0">
+        <div class="text-center mx-auto mt-5 wow fadeIn" data-wow-delay="0.1s" style="max-width: 600px;">
             <p class="fw-medium text-uppercase text-primary mb-2">Our Projects</p>
-            <h1 class="display-5 mb-5">See What We Have Completed Recently</h1>
+            <h1 class="display-5 text-white mb-5">See What We Have Completed Recently</h1>
         </div>
-        <div class="owl-carousel project-carousel bg-dark wow fadeIn" data-wow-delay="0.1s">
+        <div class="owl-carousel project-carousel wow fadeIn" data-wow-delay="0.1s">
             <a class="project-item" href="">
                 <img class="img-fluid" src="img/project-1.jpg" alt="">
                 <div class="project-title">
-                    <h5 class="text-primary mb-0">Auto Engineering</h5>
+                    <h5 class="text-primary mb-0">Drone</h5>
                 </div>
             </a>
             <a class="project-item" href="">
                 <img class="img-fluid" src="img/project-2.jpg" alt="">
                 <div class="project-title">
-                    <h5 class="text-primary mb-0">Civil Engineering</h5>
+                    <h5 class="text-primary mb-0">power station</h5>
                 </div>
             </a>
             <a class="project-item" href="">
                 <img class="img-fluid" src="img/project-3.jpg" alt="">
                 <div class="project-title">
-                    <h5 class="text-primary mb-0">Gas Engineering</h5>
+                    <h5 class="text-primary mb-0">Computer Numerical Control machine</h5>
                 </div>
             </a>
             <a class="project-item" href="">
                 <img class="img-fluid" src="img/project-4.jpg" alt="">
                 <div class="project-title">
-                    <h5 class="text-primary mb-0">Power Engineering</h5>
+                    <h5 class="text-primary mb-0">airport simulation </h5>
                 </div>
             </a>
             <a class="project-item" href="">
@@ -151,7 +151,7 @@
             <a class="project-item" href="">
                 <img class="img-fluid" src="img/project-6.jpg" alt="">
                 <div class="project-title">
-                    <h5 class="text-primary mb-0">Water Engineering</h5>
+                    <h5 class="text-primary mb-0">Computer Numerical Control machine</h5>
                 </div>
             </a>
         </div>
