modification sur les pages

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             <a class="project-item" href="">
                 <img class="img-fluid" src="img/project-5.jpg" alt="">
                 <div class="project-title">
-                    <h5 class="text-primary mb-0">Energy Engineering</h5>
+                    <h5 class="text-primary mb-0">line-following robot</h5>
                 </div>
             </a>
             <a class="project-item" href="">
