--- a/index.html
+++ b/index.html
@@ -16,6 +16,33 @@
         await OneSignal.init({
         appId: "02920e06-3209-4dfc-8f0b-f9dc624de262",
         });
+         // Fonction pour vérifier l'état d'abonnement et mettre à jour le bouton
+         function updateButtonText(isEnabled) {
+            document.getElementById("followButton").innerText = isEnabled ? "Se désabonner" : "Suivre";
+        }
+
+        // Vérifier l'abonnement au chargement de la page
+        OneSignal.isPushNotificationsEnabled().then(function(isEnabled) {
+            updateButtonText(isEnabled);
+        });
+
+        // Ajouter un événement de clic pour le bouton
+        document.getElementById("followButton").addEventListener("click", function() {
+            OneSignal.isPushNotificationsEnabled().then(function(isEnabled) {
+                if (isEnabled) {
+                    // Désabonner
+                    OneSignal.setSubscription(false);
+                    alert("Vous ne suivez plus les notifications.");
+                    updateButtonText(false);
+                } else {
+                    // S’abonner
+                    OneSignal.registerForPushNotifications().then(function() {
+                        alert("Vous êtes maintenant abonné aux notifications.");
+                        updateButtonText(true);
+                    });
+                }
+            });
+        });
     });
     </script>
     <!-- OneSignal -->
@@ -103,7 +130,7 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary px-3 d-none d-lg-block">Follow</a>
+            <a href="" class="btn btn-primary px-3 d-none d-lg-block" id="followButton">Follow</a>
             
         </div>
     </nav>
