modification sur les pages

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5">
         <a href="index.html" class="navbar-brand ps-5 me-0">
-            <div ><img class="logo" src="img/logo.png"></div>
+            <div ><img class="logo" src="img/logojdid.png"></div>
             <h1 class="text-white m-0">ClubIndus-AIAC</h1>
         </a>
         <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -89,7 +89,7 @@
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
             <a href="" class="btn btn-primary px-3 d-none d-lg-block">Follow</a>
-            <div ><img class="logo" src="img/logo.png"></div>
+            <div ><img class="logo" src="img/log.png"></div>
         </div>
     </nav>
     <!-- Navbar End -->
