--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5">
         <a href="index.html" class="navbar-brand ps-5 me-0">
-            <div ><img class="logo" src="img/logo.png"></div>
+            <div ><img class="logo" src="img/logojdid.png"></div>
             <h1 class="text-white m-0">ClubIndus-AIAC</h1>
 
         </a>
