--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5">
         <a href="index.html" class="navbar-brand ps-5 me-0">
-            <div ><img class="logo" src="img/logo.png"></div>
+            <div ><img class="logo" src="img/logojdid.png"></div>
             <h1 class="text-white m-0">ClubIndus-AIAC</h1>
             
         </a>
@@ -168,7 +168,7 @@
                 <div class="col-lg-6">
                     <div class="row gx-3 h-100">
                         <div class="col-6 align-self-start wow fadeInUp" data-wow-delay="0.1s">
-                            <img class="img-fluid" src="img/logo.jpg">
+                            <img class="img-fluid" src="img/logo.png">
                         </div>
                         <div class="col-6 align-self-end wow fadeInDown" data-wow-delay="0.1s">
                             <img class="img-fluid" src="img/about-1.jpg">
@@ -275,7 +275,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <p class="fw-medium text-uppercase text-primary mb-2">Why Choosing Us!</p>
                     <h1 class="display-5 mb-4">Few Reasons Why People Choosing Us!</h1>
-                    <p class="mb-4">TOur club focuses on equipping students with hands-on skills in industrial automation, process optimization, and production engineering. We bridge the gap between theoretical knowledge and practical applications, ensuring that members are industry-ready.</p>
+                    <p class="mb-4">Our club focuses on equipping students with hands-on skills in industrial automation, process optimization, and production engineering. We bridge the gap between theoretical knowledge and practical applications, ensuring that members are industry-ready.</p>
                     <div class="row gy-4">
                         <div class="col-12">
                             <div class="d-flex">
