modification sur les pages

--- a/about.html
+++ b/about.html
@@ -208,7 +208,7 @@
 
 
     <!-- Team Start -->
-    <div <div class="container-xxl py-5">
+    <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <p class="fw-medium text-uppercase text-primary mb-2">Our Team</p>
