--- a/project.html
+++ b/project.html
@@ -206,8 +206,7 @@
     <!-- Copyright Start -->
     <div class="container-fluid copyright bg-dark py-4">
         <div class="container text-center">
-            <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="#">indus aiac</a>, All Right Reserved.</p>
-            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+            <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="#">ClubIndus-AIAC</a>, All Right Reserved.</p>
             <p class="mb-0">Created By <a class="fw-semi-bold" href="">Industrial Club Team</a></p>
         </div>
     </div>
